Fix mixed sentences in error messages

BUG: 310645
REVIEW: 107700